# docs/swagger.json
@@ -239,7 +239,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/schemas.SupplierResponse"
+                    "$ref": "#/definitions/schemas.SupplierLinkResponse"
                 },
                 "message": {
                     "type": "string"
@@ -271,7 +271,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/schemas.SupplierResponse"
+                    "$ref": "#/definitions/schemas.SupplierLinkResponse"
                 },
                 "message": {
                     "type": "string"
@@ -295,7 +295,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/schemas.SupplierResponse"
+                        "$ref": "#/definitions/schemas.SupplierLinkResponse"
                     }
                 },
                 "message": {
@@ -307,7 +307,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/schemas.SupplierResponse"
+                    "$ref": "#/definitions/schemas.SupplierLinkResponse"
                 },
                 "message": {
                     "type": "string"
@@ -347,9 +347,65 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/schemas.SupplierResponse"
+                    "$ref": "#/definitions/schemas.SupplierLinkResponse"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.ExternalSupplier": {
+            "type": "object",
+            "properties": {
+                "ativo": {
+                    "type": "string"
+                },
+                "bairro": {
+                    "type": "string"
+                },
+                "cep": {
+                    "type": "string"
+                },
+                "cgccfo": {
+                    "type": "string"
+                },
+                "cidade": {
+                    "type": "string"
+                },
+                "codcfo": {
+                    "type": "string"
+                },
+                "codcoligada": {
+                    "type": "integer"
+                },
+                "complemento": {
+                    "type": "string"
+                },
+                "contato": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "nome": {
+                    "type": "string"
+                },
+                "nomefantasia": {
+                    "type": "string"
+                },
+                "numero": {
+                    "type": "string"
+                },
+                "rua": {
+                    "type": "string"
+                },
+                "telefone": {
+                    "type": "string"
+                },
+                "tipo": {
+                    "type": "string"
+                },
+                "uf": {
                     "type": "string"
                 }
             }
@@ -391,12 +447,9 @@
                 }
             }
         },
-        "schemas.SupplierResponse": {
+        "schemas.SupplierLinkResponse": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "string"
-                },
                 "category": {
                     "$ref": "#/definitions/schemas.SupplierCategory"
                 },
@@ -412,17 +465,11 @@
                 "deleted_at": {
                     "type": "string"
                 },
-                "email": {
-                    "type": "string"
+                "external_supplier": {
+                    "$ref": "#/definitions/schemas.ExternalSupplier"
                 },
                 "id": {
                     "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
                 },
                 "services": {
                     "type": "array",
