# handler/response.go
@@ -31,32 +31,32 @@ type ErrorResponse struct {
 
 // Create Supplier
 type CreateSupplierResponse struct {
-	Message string                   `json:"message"`
-	Data    schemas.SupplierResponse `json:"data"`
+	Message string                      `json:"message"`
+	Data    schemas.SupplierLinkResponse `json:"data"`
 }
 
 // Delete Supplier
 type DeleteSupplierResponse struct {
-	Message string                   `json:"message"`
-	Data    schemas.SupplierResponse `json:"data"`
+	Message string                      `json:"message"`
+	Data    schemas.SupplierLinkResponse `json:"data"`
 }
 
 // Show Supplier
 type ShowSupplierResponse struct {
-	Message string                   `json:"message"`
-	Data    schemas.SupplierResponse `json:"data"`
+	Message string                      `json:"message"`
+	Data    schemas.SupplierLinkResponse `json:"data"`
 }
 
 // List Suppliers
 type ListSuppliersResponse struct {
-	Message string                     `json:"message"`
-	Data    []schemas.SupplierResponse `json:"data"`
+	Message string                        `json:"message"`
+	Data    []schemas.SupplierLinkResponse `json:"data"`
 }
 
 // Update Supplier
 type UpdateSupplierResponse struct {
-	Message string                   `json:"message"`
-	Data    schemas.SupplierResponse `json:"data"`
+	Message string                      `json:"message"`
+	Data    schemas.SupplierLinkResponse `json:"data"`
 }
 
 // Create Supplier Service
